# A2A-MCP-Bridge

./: .gitignore  DESIGN.md  README.md  pyproject.toml
examples/: README.md  requirements.txt  run_demo.sh
examples/A2A/: call_adapter.py
examples/MCP/: service.py
examples/sample_mcp_service/: agent.py  main.py
src/translator/: __main__.py  agent_card.py  mcp_client.py  task_manager.py
tests/: test_agent_card.py  test_mcp_client.py  test_task_manager.py
